Revision history for Config::App

{{$NEXT}}

1.09      2018-10-02 07:14:34-07:00 America/Los_Angeles
        - Fix for include file recusions to warn and continue

1.08      2018-07-24 08:22:45-07:00 America/Los_Angeles
        - Fix bug in reporting of optional includes in conf dump

1.07      2018-06-26 16:43:37-07:00 America/Los_Angeles
        - Returned complex data structures are copies not refs to original data
        - Able to merge arrays in place of hashes

1.06      2018-06-15 16:03:13-07:00 America/Los_Angeles
        - Adding Perl versions to test; annual general update for 2018
        - Extended "libs" keyword to allow for single scalar string

1.05      2017-01-10 04:03:20-08:00 America/Los_Angeles
        - import() accepts multiple library dirs
        - import() gracefully calls new()
        - Support for the "libs" configuration keyword

1.04      2016-08-31 08:26:11-07:00 America/Los_Angeles
        - Add "optional_include" keyword functionality

1.03      2015-09-08 19:13:28-07:00 America/Los_Angeles
        - Library directory injection during import

1.02      2015-06-09 19:10:53-07:00 America/Los_Angeles
        - Small POD improvement

1.01      2015-06-09 18:46:36-07:00 America/Los_Angeles
        - First version, released on an unsuspecting world.