@@ -35,7 +35,7 @@ my %WriteMakefileArgs = (
     "Test::Most" => 0,
     "constant" => 0
   },
-  "VERSION" => "1.09",
+  "VERSION" => "1.10",
   "test" => {
     "TESTS" => "t/*.t"
   }
